--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+!**/src/main/resources/index/
+
 ### STS ###
 .apt_generated
 .classpath
@@ -28,8 +30,7 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
-
-### VS Code ###
+ledgerware/static/*### VS Code ###
 .vscode/
 
 .mbox
