--- a/pom.xml
+++ b/pom.xml
@@ -69,5 +69,17 @@
 			<artifactId>lucene-core</artifactId>
 			<version>8.8.2</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+
+
 	</dependencies>
 </project>
