--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/archedetector
 spring.datasource.username=postgres
 spring.datasource.password=Arnold1
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.format_sql=true
 server.servlet.context-path=/api/v1
