--- a/pom.xml
+++ b/pom.xml
@@ -84,5 +84,10 @@
 			<artifactId>unirest-java</artifactId>
 			<version>1.4.9</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.sisyphsu</groupId>
+			<artifactId>dateparser</artifactId>
+			<version>1.0.7</version>
+		</dependency>
 	</dependencies>
 </project>
