--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/archedetector
-spring.datasource.username=postgres
-spring.datasource.password=Arnold1
+spring.datasource.url=jdbc:postgresql://localhost:54321/arch
+spring.datasource.username=arch_dev
+spring.datasource.password=arch_dev_pass
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.format_sql=true
 server.servlet.context-path=/api/v1
