--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,6 @@
 		<java.version>16</java.version>
 	</properties>
 
-	<repositories>
-		<repository>
-			<id>atlassian-public</id>
-			<url>https://m2proxy.atlassian.com/repository/public</url>
-		</repository>
-	</repositories>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -98,6 +91,13 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.20</version>
 			<scope>provided</scope>
+		</dependency>
+
+		<!-- Zip4J library provides utilities for reading and writing ZIP files. -->
+		<dependency>
+			<groupId>net.lingala.zip4j</groupId>
+			<artifactId>zip4j</artifactId>
+			<version>2.9.0</version>
 		</dependency>
 	</dependencies>
 </project>
